--- a/springcloud/oauth2/工具代码文档.md
+++ b/springcloud/oauth2/工具代码文档.md
@@ -1,5 +1,7 @@
 **获取SecurityContext**
 
 SecurityContextHolder.getContext();
+SecurityContextHolder.getContext().getAuthentication(); // 获取认证用户信息
+
 
 
