--- a/springcloud/oauth2/理论文档/令牌的使用.md
+++ b/springcloud/oauth2/理论文档/令牌的使用.md
@@ -1,7 +1,7 @@
 令牌的使用
 ===========
 
-> [获取令牌]()  
+> [获取令牌](https://github.com/zhangdberic/doc/blob/master/springcloud/oauth2/%E7%90%86%E8%AE%BA%E6%96%87%E6%A1%A3/%E5%9B%9B%E7%A7%8D%E6%8E%88%E6%9D%83%E6%A8%A1%E5%BC%8F.md)  
 ----------
 
 > 携带令牌发送请求
