--- a/springcloud/oauth2/理论文档/四种授权模式.md
+++ b/springcloud/oauth2/理论文档/四种授权模式.md
@@ -104,7 +104,13 @@ https://oauth.weibo.com/token?
 ==========
 最后一种方式是凭证式（client credentials），适用于没有前端的命令行应用，即在命令行下请求令牌。
 
-**第一步**，我站"应用在命令行向微博发出请求。
+**第一步**，我站"应用在命令行向微博发出请求。  
+
+https://oauth.b.com/token?
+  grant_type=client_credentials&
+  client_id=CLIENT_ID&
+  client_secret=CLIENT_SECRET
+
 
 上面 URL 中，grant_type参数等于client_credentials表示采用凭证式，client_id和client_secret用来让 B 确认 A 的身份。
 
