--- a/springcloud/oauth2/理论文档/四种授权模式.md
+++ b/springcloud/oauth2/理论文档/四种授权模式.md
@@ -25,7 +25,7 @@ redirect_uri 参数是"微博"接受或拒绝请求后的跳转网址，scope参
 scope 参数表示要求的授权范围（这里是只读）
 
 **第二步**，用户跳转后，微博会要求用户登录(输入用户名和密码)，并询问是否同意给予"我站"授权。用户表示同意，这时微博就会跳回redirect_uri参数指定的网址。
-跳转时，会传回一个授权码，就像下面这样。  
+跳转时，会传回一个授权码，就像下面这样。  **这也就是为什么是授权码模式了，因为只有用户登录成功后，才能返回授权码，相当于用户授权了。**
 https://my.com/callback?code=AUTHORIZATION_CODE
 
 **第三步**，"我站"拿到授权码以后，就可以在后端，向微博请求令牌。  
