--- a/springcloud/oauth2/db/schemas/大型服务访问授权.md
+++ b/springcloud/oauth2/db/schemas/大型服务访问授权.md
@@ -90,6 +90,9 @@ antMatchers("/data/delete").access("hasIpAddress('192.168.5.31')");
 通过上面的用户表和用户权限表设计，应用端发送/user请求验证token的同时，也获取到了这个用户对应的user和authorities信息，进而**服务资源类**内的HttpSecurity规则匹配，匹配正确可以访问否则，否则访问拒绝。当然这个过程是spring oauth2 client自动完成的。  
 
 
+请求/user性能优化
+----  
+因为每次服务调用都oauth2 client底层都要发送请求/user到oauth2来获取用户和权限数据，因为按照上面的设计权限数据如果很多，那么会影响请求的响应时间而且对oauth2服务器照成压力，因此应该对/user请求进行缓存处理，例如：基于redis缓存，key=token，value=/user返回的json数据，expire=60s，这个过期时间根据应用情况，在配置文件中调整。
 
 
 
