--- a/springcloud/oauth2/后台管理器设计.md
+++ b/springcloud/oauth2/后台管理器设计.md
@@ -21,6 +21,22 @@ oauth2的后台管理器
 > 审计管理  
 > > 查询审计记录  
 
-基于restful服务对外提供操作接口  
-----  
+对外提供服务操作
+====  
+对外提供服务操作，允许应用(客户端)在授权的情况下，可以操作oauth2后台。例如:应用xxx，可以通过调用/oauth2manager/user/add来增加用户。
+
+独立oauth2-manager-service项目  
+====  
+
+独立出security-oauth2，单独建一个项目(oauth2-manager-service)，对外提供服务操作。
+
+**URL规划**  
+
+> 应用管理(/oauth2manager/client)
+>> 增加应用(/oauth2manager/client/add)
+>> 修改应用(/oauth2manager/client/{clientId}/modify)
+
+
+
+
 
