--- a/springcloud/oauth2/后台管理器设计.md
+++ b/springcloud/oauth2/后台管理器设计.md
@@ -32,9 +32,23 @@ oauth2的后台管理器
 
 **URL规划**  
 
-> 应用管理(/oauth2manager/client)
->> 增加应用(/oauth2manager/client/add)
->> 修改应用(/oauth2manager/client/{clientId}/modify)
+> 应用管理(/oauth2managerservice/client)  
+>> 增加应用(/oauth2managerservice/client/add)  
+>> 修改应用(/oauth2managerservice/client/{clientId}/modify)  
+
+> 用户管理(/oauth2managerservice/user)  
+>> 增加用户(/oauth2managerservice/user/add)  
+>> 修改用户(/oauth2managerservice/user/{userid}/modify)  
+>> 删除用户(/oauth2managerservice/user/{userid}/delete)  
+>> 用户授权(/oauth2managerservice/user/{userid}/authorize）  
+
+> 权限管理(/oauth2managerservice/)
+> > 增加权限  
+> > 修改权限  
+> > 删除权限  
+
+
+
 
 
 
