--- a/springcloud/oauth2/后台管理器设计.md
+++ b/springcloud/oauth2/后台管理器设计.md
@@ -42,9 +42,9 @@ oauth2的后台管理器
 >> 删除用户(/oauth2managerservice/user/{userid}/delete)  
 >> 用户授权(/oauth2managerservice/user/{userid}/authorize）  
 
-> 权限管理(/oauth2managerservice/)
-> > 增加权限  
-> > 修改权限  
+> 权限管理(/oauth2managerservice/authority)  
+> > 增加权限(/oauth2managerservice/authority//add)  
+> > 修改权限(/oauth2managerserivce/authority/
 > > 删除权限  
 
 
