--- a/springcloud/oauth2/后台管理器设计.md
+++ b/springcloud/oauth2/后台管理器设计.md
@@ -43,9 +43,17 @@ oauth2的后台管理器
 >> 用户授权(/oauth2managerservice/user/{userid}/authorize）  
 
 > 权限管理(/oauth2managerservice/authority)  
-> > 增加权限(/oauth2managerservice/authority//add)  
-> > 修改权限(/oauth2managerserivce/authority/
-> > 删除权限  
+> > 增加权限(/oauth2managerservice/authority/add)  
+> > 修改权限(/oauth2managerserivce/authority/{authorityid}/modify)  
+> > 删除权限(/oauth2managerserivce/authority/{authorityid}/delete)  
+
+安全设计
+====  
+id生成器，基于uuid生成id，不使用序列，防止被猜到。  
+
+
+
+
 
 
 
