--- a/springcloud/oauth2/后台管理器设计.md
+++ b/springcloud/oauth2/后台管理器设计.md
@@ -6,16 +6,19 @@ oauth2的后台管理器
 > 应用管理
 > > 增加应用  
 > > 修改应用  
+> > 查看应用  
 
 > 用户管理  
 > > 增加用户  
 > > 修改用户  
+> > 查看用户  
 > > 删除用户  
 > > 用户授权  
 
 > 权限管理  
 > > 增加权限  
 > > 修改权限  
+> > 查看权限  
 > > 删除权限  
 
 > 审计管理  
@@ -30,26 +33,39 @@ oauth2的后台管理器
 
 独立出security-oauth2，单独建一个项目(oauth2-manager-service)，对外提供服务操作。
 
-**URL规划**  
+**对外提供服务规划**  
+
+
 
 > 应用管理(/oauth2managerservice/client)  
 >> 增加应用(/oauth2managerservice/client/add)  
 >> 修改应用(/oauth2managerservice/client/{clientId}/modify)  
+>> 查看应用(/oauth2managerservice/client/{clientId}/view)  
 
 > 用户管理(/oauth2managerservice/user)  
 >> 增加用户(/oauth2managerservice/user/add)  
 >> 修改用户(/oauth2managerservice/user/{userid}/modify)  
+>> 查看用户(/oauth2managerservice/user/{userid}/view)  
 >> 删除用户(/oauth2managerservice/user/{userid}/delete)  
+>> 获取用户已有的权限(/oauth2managerservice/user/{userid}/auth/{clientId}/list)  
+>> 获取用户待分配的权限(/oauth2managerservice/user/{userid}/auth/)  
 >> 用户授权(/oauth2managerservice/user/{userid}/authorize）  
+
 
 > 权限管理(/oauth2managerservice/authority)  
 > > 增加权限(/oauth2managerservice/authority/add)  
 > > 修改权限(/oauth2managerserivce/authority/{authorityid}/modify)  
+> > 查看权限(/oauth2managerservice/authority/{authorityid}/view)  
 > > 删除权限(/oauth2managerserivce/authority/{authorityid}/delete)  
 
 安全设计
 ====  
+
+> id生成器  
 id生成器，基于uuid生成id，不使用序列，防止被猜到。  
+
+> HttpSecurity  
+
 
 
 
