--- a/springcloud/oauth2/db/schemas/大型服务访问授权.md
+++ b/springcloud/oauth2/db/schemas/大型服务访问授权.md
@@ -94,13 +94,8 @@ antMatchers("/data/delete").access("hasIpAddress('192.168.5.31')");
 ----  
 因为每次服务调用都oauth2 client底层都要发送请求/user到oauth2来获取用户和权限数据，因为按照上面的设计权限数据如果很多，那么会影响请求的响应时间而且对oauth2服务器照成压力，因此应该对/user请求进行缓存处理，例如：基于redis缓存，key=token，value=/user返回的json数据，expire=60s，这个过期时间根据应用情况，在配置文件中调整。
 
-
-
-
-
-
-
-
-
-
-
+补充  
+----  
+为了在oauth2后台管理器，管理方便，可以再在表oauth2_authority加入两个字段：  
+1.parentId 上级id，指定上级id，如果一个id被指定为了上级id那么这个authority就目录(树形结构)了。
+2.sortNo 排序吗，指定在同一个目录下，显示的顺序。
