--- a/springcloud/oauth2/后台管理器设计.md
+++ b/springcloud/oauth2/后台管理器设计.md
@@ -33,30 +33,14 @@ oauth2的后台管理器
 
 独立出security-oauth2，单独建一个项目(oauth2-manager-service)，对外提供服务操作。
 
-**对外提供服务规划**  
+这里提供的服务包括两部分：  
+> 对内(内部管理用)，提供给oauth2-manager-service项目管理界面的服务(前后分离)，操作数据的权限比较高。
 
-
-
-> 应用管理(/oauth2managerservice/client)  
->> 增加应用(/oauth2managerservice/client/add)  
->> 修改应用(/oauth2managerservice/client/{clientId}/modify)  
->> 查看应用(/oauth2managerservice/client/{clientId}/view)  
-
-> 用户管理(/oauth2managerservice/user)  
->> 增加用户(/oauth2managerservice/user/add)  
->> 修改用户(/oauth2managerservice/user/{userid}/modify)  
->> 查看用户(/oauth2managerservice/user/{userid}/view)  
->> 删除用户(/oauth2managerservice/user/{userid}/delete)  
->> 获取用户已有的权限(/oauth2managerservice/user/{userid}/auth/{clientId}/list)  
->> 获取用户待分配的权限(/oauth2managerservice/user/{userid}/auth/)  
->> 用户授权(/oauth2managerservice/user/{userid}/authorize）  
-
-
-> 权限管理(/oauth2managerservice/authority)  
-> > 增加权限(/oauth2managerservice/authority/add)  
-> > 修改权限(/oauth2managerserivce/authority/{authorityid}/modify)  
-> > 查看权限(/oauth2managerservice/authority/{authorityid}/view)  
-> > 删除权限(/oauth2managerserivce/authority/{authorityid}/delete)  
+> 提供应用(客户端)操作oauth2-manager-service项目数据的服务，应用只能操作本应用内的数据，包括：  
+>> 查看和修改本应用的数据(除clientId)。  
+>> 增加、修改、查看、列出(分页)、删除本应用持有的用户数据。
+>> 增加、修改、查看、列出(树形)、删除本应用持有的权限数据。
+>> 获取本应用内某个用户持有的权限、给本应用的用户分配权限。
 
 安全设计
 ====  
@@ -64,7 +48,7 @@ oauth2的后台管理器
 > id生成器  
 id生成器，基于uuid生成id，不使用序列，防止被猜到。  
 
-> HttpSecurity  
+
 
 
 
