--- a/springcloud/oauth2/后台管理器设计.md
+++ b/springcloud/oauth2/后台管理器设计.md
@@ -24,7 +24,7 @@ oauth2的后台管理器
 > 审计管理  
 > > 查询审计记录  
 
-对外提供服务操作
+提供服务操作
 ====  
 对外提供服务操作，允许应用(客户端)在授权的情况下，可以操作oauth2后台。例如:应用xxx，可以通过调用/oauth2manager/user/add来增加用户。
 
